<resources>
    <string name="app_name">AC-InstaClone</string>

    <string name="back4app_server_url">https://parseapi.back4app.com/</string>

    <!-- Change the following strings as required -->
    <string name="back4app_app_id">1qmhsKAzouccpVx0joCnrdoVcTHBDWeBVk1LZcMv</string>
    <string name="back4app_client_key">k1rTOVQlSN9qPWdJpjAapzg5Xw0bVxtnb3wpy14T</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_fragment">Profile fragment</string>
    <string name="share_picture_fragment">Share picture fragment</string>
    <string name="user_fragment">User fragment</string>
    <string name="loading_users_please_wait">Loading Users... Please Wait</string>
    <string name="please_enter_your_bio">Please enter your bio...</string>
    <string name="please_enter_your_profession">Please enter your profession...</string>
    <string name="please_enter_a_profile_name">Please enter a profile name...</string>
    <string name="please_enter_your_favorite_sport">Please enter your favorite sport...</string>
    <string name="please_enter_your_hobbies">Please enter your hobbies...</string>
    <string name="update_info">Update Info</string>
</resources>
